# passfort

./: .gitignore  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
lib/: encryption.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: encryption.rs  lib.rs  main.rs
src/app/: layout.tsx  page.tsx
src/app/(home)/: page.tsx
src/app/about/: page.tsx
src/app/api/decrypt/: route.ts
src/app/api/encrypt/: route.ts
src/app/api/generate-password/: route.ts
src/components/: Dialog.tsx  Navbar.jsx
src/context/: ReactQuery.tsx
src/types/: password.d.ts
src/util/: encrypt.ts  fs.ts
